crates/oxc_react_compiler/tests/snapshots/allow-global-mutation-unused-usecallback.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-global-mutation-unused-usecallback.js
---
import { c as _c } from "react/compiler-runtime";
import { useCallback, useEffect, useState } from "react";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>Ok</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	window.foo = true;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
