crates/oxc_react_compiler/tests/snapshots/allow-merge-refs-pattern.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-merge-refs-pattern.js
---
import { c as _c } from "react/compiler-runtime";
// @enableTreatRefLikeIdentifiersAsRefs @validateRefAccessDuringRender
import { useRef } from "react";
function Component() {
	const $ = _c(1);
	const ref = useRef(null);
	const ref2 = useRef(null);
	const mergedRef = mergeRefs([ref], ref2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Stringify ref={mergedRef} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
