crates/oxc_react_compiler/tests/snapshots/allow-mutating-ref-in-callback-passed-to-jsx.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-mutating-ref-in-callback-passed-to-jsx.tsx
---
import { c as _c } from "react/compiler-runtime";
// @validateRefAccessDuringRender
import { useRef } from "react";
function Component() {
	const $ = _c(2);
	const ref = useRef(null);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = () => {
			if (ref.current !== null) {
				ref.current = "";
			}
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const onClick = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <><input ref={ref} /><button onClick={onClick} /></>;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
